--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-loading": "^2.0.3"
+    "react-image-gallery": "^1.3.0",
+    "react-loading": "^2.0.3",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "^20",
