--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.2.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -17,7 +18,8 @@
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-loading": "^2.0.3",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
