--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-loading": "^2.0.3",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
